- mass refactoring - work on reimplimenting bookmarks

--- a/styles/style.css
+++ b/styles/style.css
@@ -172,6 +172,10 @@ body {
     color: white;
 }
 
+.sim-list-node-offline {
+    color: #969696;
+}
+
 .sim-list-node-selected {
     background-color: #fac98c;
     color: black;
