--- a/styles/style.css
+++ b/styles/style.css
@@ -343,60 +343,38 @@ body {
 }
 
 .block-gold {
-    border-radius: 45px;
     background-image: linear-gradient(90deg, #d4af37, #aa8714);
-    
     box-shadow: -3px -3px 4px 3px rgba(0, 0, 0, 0.35) inset,
                 6px 6px 6px 4px rgba(255, 255, 255, 0.8) inset;
 }
 
 .block-pink {
-    border-radius: 45px;
     background-image: linear-gradient(90deg, pink, rgb(255, 132, 153));
-    
-    box-shadow: -3px -3px 4px 3px rgba(0, 0, 0, 0.35) inset,
-                6px 6px 6px 4px rgba(255, 255, 255, 0.8) inset;
 }
 
 .block-seagreen {
-    border-radius: 45px;
     background-image: linear-gradient(90deg, seagreen, rgb(23, 103, 57));
-
-    box-shadow: -3px -3px 4px 3px rgba(0, 0, 0, 0.4) inset,
-                4px 4px 5px 3px rgba(255, 255, 255, 0.65) inset;
 }
 
 .block-dark {
-    border-radius: 45px;
     background-image: linear-gradient(90deg, rgb(75, 75, 75), rgb(49, 49, 49));
-
-    box-shadow: -3px -3px 4px 3px rgba(0, 0, 0, 0.4) inset,
-                4px 4px 5px 3px rgba(255, 255, 255, 0.65) inset;
 }
 
 .block-red {
-    border-radius: 45px;
     background-image: linear-gradient(90deg, rgb(210, 67, 67), rgb(183, 56, 56));
-
-    box-shadow: -3px -3px 4px 3px rgba(0, 0, 0, 0.4) inset,
-                4px 4px 5px 3px rgba(255, 255, 255, 0.65) inset;
 
 }
 
 .block-bone {
-    border-radius: 45px;
     background-image: linear-gradient(90deg, rgb(242, 237, 223), rgb(218, 211, 190));
-
-    box-shadow: -3px -3px 4px 3px rgba(0, 0, 0, 0.4) inset,
-                4px 4px 5px 3px rgba(255, 255, 255, 0.65) inset;
 }
 
 .block-purple {
-    border-radius: 45px;
     background-image: linear-gradient(90deg, rgb(121, 121, 162), rgb(79, 79, 135));
+}
 
-    box-shadow: -3px -3px 4px 3px rgba(0, 0, 0, 0.4) inset,
-                4px 4px 5px 3px rgba(255, 255, 255, 0.65) inset;
+.label-pink {
+    background-color: pink;
 }
 
 @keyframes move {
