--- a/styles/style.css
+++ b/styles/style.css
@@ -121,6 +121,7 @@ body {
 }
 
 .outset-title {
+    z-index: 20;
     cursor: default;
 
     margin: 10px auto;
@@ -330,13 +331,11 @@ body {
                 0px 0px 5px 5px rgba(255, 233, 163, 0.5) inset;
 }
 
-.rainbow-title {
+.label-gold {
     color: rgba(0, 0, 0, 0.55);
     background: #d4af37;
     text-shadow: -1px -1px rgba(0, 0, 0, 0.35);
     font-style: italic;
-    animation: move 60s linear infinite;
-
     box-shadow: -2px -3px 2px 2px rgba(0, 0, 0, 0.5) inset,
                 2px 3px 2px 2px rgba(255, 255, 255, 0.8) inset,
                 3px 3px 2px 1px rgba(0, 0, 0, 0.6);
@@ -346,6 +345,12 @@ body {
     background-image: linear-gradient(90deg, #d4af37, #aa8714);
     box-shadow: -3px -3px 4px 3px rgba(0, 0, 0, 0.35) inset,
                 6px 6px 6px 4px rgba(255, 255, 255, 0.8) inset;
+}
+
+.inset-gold {
+    color: rgba(0, 0, 0, 0.55) !important;
+    text-shadow: -1px -1px rgba(0, 0, 0, 0.35) !important;
+    background-color: #ac8f31 !important;
 }
 
 .block-pink {
