--- a/styles/style.css
+++ b/styles/style.css
@@ -1067,6 +1067,35 @@ body {
 }
 /* #endregion */
 
+/* #region Sort Entity Names */
+.list-title-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.sort-button {
+    position: relative;
+    top: 19px;
+    border-radius: 50%;
+    background: url(../images/buttons/name-sort.png?v0.2.1a) no-repeat;
+    height: 41px;
+    width: 41px;
+    border: none;
+    box-shadow: -2px -2px 3px 2px rgba(0, 0, 0, 0.4) inset,
+                4px 4px 3px 1px rgba(255, 255, 255, 0.5) inset,
+                1px 1px 2px 1px rgba(0, 0, 0, 0.6);
+}
+
+.sort-button:hover {
+    background: url(../images/buttons/name-sort-hover.png) no-repeat;
+}
+
+.sort-button:active {
+    background: url(../images/buttons/name-sort-selected.png) no-repeat;
+}
+/* #endregion */
+
 /* #region Animations */
 @keyframes fadeIn {
     0% {opacity: 0;}
