--- a/styles/style.css
+++ b/styles/style.css
@@ -528,8 +528,9 @@ body {
     align-self: center;
     min-width: 350px;
     width: fit-content;
-    padding: 0px 15px 9px 15px;
+    padding: 1px 15px 2px 15px;
     margin: 12px;
+    max-height: 36px;
 }
 
 .thumb-1-2 {
