--- a/styles/style.css
+++ b/styles/style.css
@@ -1106,6 +1106,65 @@ body {
 }
 /* #endregion */
 
+/* #region Import/Export */
+.bookmark-header-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.bookmark-header-container * {
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+.bookmark-button {
+    border: none;
+    background: transparent;
+}
+
+.export-arrow {
+    background: url(../images/buttons/export-arrow.png?v0.2.1a) 0px 0px;
+    width: 41px;
+    height: 42px;
+    margin-top: 9px;
+
+    border-radius: 50%;
+    box-shadow: -2px -2px 3px 2px rgba(0, 0, 0, 0.4) inset,
+                4px 4px 3px 1px rgba(255, 255, 255, 0.5) inset,
+                1px 1px 2px 1px rgba(0, 0, 0, 0.6);
+}
+
+.export-arrow:hover {
+    background: url(../images/buttons/export-arrow.png?v0.2.1a) 0px 84px;
+}
+
+.export-arrow:active {
+    background: url(../images/buttons/export-arrow.png?v0.2.1a) 0px 42px;
+}
+
+.import-arrow {
+    background: url(../images/buttons/export-arrow.png?v0.2.1a) 41px 0px;
+    width: 41px;
+    height: 42px;
+    margin-top: 9px;
+
+    border-radius: 50%;
+    box-shadow: -2px -2px 3px 2px rgba(0, 0, 0, 0.4) inset,
+                4px 4px 3px 1px rgba(255, 255, 255, 0.5) inset,
+                1px 1px 2px 1px rgba(0, 0, 0, 0.6);
+}
+
+.import-arrow:hover {
+    background: url(../images/buttons/export-arrow.png?v0.2.1a) 41px 84px;
+}
+
+.import-arrow:active {
+    background: url(../images/buttons/export-arrow.png?v0.2.1a) 41px 42px;
+}
+/* #endregion */
+
 /* #region Animations */
 @keyframes fadeIn {
     0% {opacity: 0;}
