--- a/styles/style.css
+++ b/styles/style.css
@@ -365,6 +365,7 @@ body {
     background-color: #ac8f31 !important;
 }
 
+/* BLOCK STYLE */
 .block-pink {
     background-image: linear-gradient(90deg, pink, rgb(255, 132, 153));
 }
@@ -389,6 +390,31 @@ body {
     background-image: linear-gradient(90deg, rgb(121, 121, 162), rgb(79, 79, 135));
 }
 
+.block-orange {
+    background-image: linear-gradient(90deg, rgb(255, 196, 0), orange);
+}
+
+.block-yellow {
+    background-image: linear-gradient(90deg, rgb(251, 239, 9), rgb(251, 223, 9));
+}
+
+.block-blue {
+    background-image: linear-gradient(90deg, rgb(57, 77, 96), rgb(37, 55, 78));
+}
+
+.block-silver {
+    background-image: linear-gradient(90deg, rgb(158, 158, 158), rgb(110, 110, 110));
+}
+
+.block-maroon {
+    background-image: linear-gradient(90deg, rgb(103, 0, 0), rgb(77, 1, 1));
+}
+
+.block-darkgreen {
+    background-image: linear-gradient(90deg, rgb(1, 74, 1), rgb(2, 67, 2));
+}
+
+/* LABEL STYLE */
 .label-pink {
     background-color: pink;
     color: rgb(255, 255, 255);
@@ -417,6 +443,38 @@ body {
     background-color: rgb(121, 121, 162);
 }
 
+.label-orange {
+    background-color: orange;
+    color: white;
+}
+
+.label-yellow {
+    background-color: rgb(251, 239, 9);
+    color: rgb(33, 21, 4);
+    text-shadow: 0px 2px 1px rgb(162, 134, 24);
+}
+
+.label-blue {
+    background-color: rgb(57, 77, 96);
+}
+
+.label-silver {
+    background-color: rgb(158, 158, 158);
+}
+
+.label-maroon {
+    background-color: rgb(103, 0, 0);
+    color: rgb(255, 255, 255);
+    text-shadow: 0px 2px 1px black;
+}
+
+.label-darkgreen {
+    background-color: rgb(1, 74, 1);
+    color: rgb(255, 255, 255);
+    text-shadow: 0px 2px 1px black;
+}
+
+/* INSET STYLE */
 .inset-pink {
     background-color: rgb(184, 113, 125) !important;
     color: rgb(242, 237, 223) !important;
@@ -443,6 +501,37 @@ body {
 
 .inset-purple {
     background-color: rgb(94, 94, 120) !important;
+}
+
+.inset-orange {
+    background-color: rgb(198, 131, 7) !important;
+    color: white !important;
+}
+
+.inset-yellow {
+    background-color: rgb(225, 199, 5) !important;
+    color: rgb(33, 21, 4) !important;
+    text-shadow: 0px 2px 1px rgb(162, 134, 24) !important;
+}
+
+.inset-blue {
+    background-color: rgb(29, 41, 53) !important;
+}
+
+.inset-silver {
+    background-color: rgb(96, 96, 96) !important;
+}
+
+.inset-maroon {
+    background-color: rgb(56, 2, 2) !important;
+    color: rgb(242, 237, 223) !important;
+    text-shadow: 0px 2px 1px black !important;
+}
+
+.inset-darkgreen {
+    background-color: rgb(2, 49, 2) !important;
+    color: rgb(242, 237, 223) !important;
+    text-shadow: 0px 2px 1px black !important;
 }
 
 @keyframes move {
