--- a/styles/style.css
+++ b/styles/style.css
@@ -354,7 +354,7 @@ body {
 }
 
 .block-gold {
-    background-image: linear-gradient(90deg, #d4af37, #aa8714);
+    background-image: url(../images/panel/gold-texture.png?v0.2.1d), linear-gradient(90deg, #d4af37, #aa8714);
     box-shadow: -3px -3px 4px 3px rgba(0, 0, 0, 0.35) inset,
                 6px 6px 6px 4px rgba(255, 255, 255, 0.8) inset;
 }
