- cache busted to v0.2.2a

--- a/styles/style.css
+++ b/styles/style.css
@@ -300,27 +300,27 @@ body {
 }
 
 .window-minable {
-    background: url(../images/buttons/min-window-button.png?v0.2.1d) 0 0;
+    background: url(../images/buttons/min-window-button.png?v0.2.2a) 0 0;
 }
 
 .window-minable:hover {
-    background: url(../images/buttons/min-window-button.png?v0.2.1d) 82px 0;
+    background: url(../images/buttons/min-window-button.png?v0.2.2a) 82px 0;
 }
 
 .window-minable:active {
-    background: url(../images/buttons/min-window-button.png?v0.2.1d) 41px 0;
+    background: url(../images/buttons/min-window-button.png?v0.2.2a) 41px 0;
 }
 
 .window-maxable {
-    background: url(../images/buttons/min-window-button.png?v0.2.1d) 0 41px;
+    background: url(../images/buttons/min-window-button.png?v0.2.2a) 0 41px;
 }
 
 .window-maxable:hover {
-    background: url(../images/buttons/min-window-button.png?v0.2.1d) 82px 41px;
+    background: url(../images/buttons/min-window-button.png?v0.2.2a) 82px 41px;
 }
 
 .window-maxable:active {
-    background: url(../images/buttons/min-window-button.png?v0.2.1d) 41px 41px;
+    background: url(../images/buttons/min-window-button.png?v0.2.2a) 41px 41px;
 }
 /* #endregion */
 
@@ -345,7 +345,7 @@ body {
 
 .label-gold {
     color: rgba(0, 0, 0, 0.55);
-    background: url(../images/panel/gold-texture.png?v0.2.1d), #d4af37;
+    background: url(../images/panel/gold-texture.png?v0.2.2a), #d4af37;
     text-shadow: -1px -1px rgba(0, 0, 0, 0.35);
     font-style: italic;
     box-shadow: -2px -3px 2px 2px rgba(0, 0, 0, 0.5) inset,
@@ -354,7 +354,7 @@ body {
 }
 
 .block-gold {
-    background-image: url(../images/panel/gold-texture.png?v0.2.1d), linear-gradient(90deg, #d4af37, #aa8714);
+    background-image: url(../images/panel/gold-texture.png?v0.2.2a), linear-gradient(90deg, #d4af37, #aa8714);
     box-shadow: -3px -3px 4px 3px rgba(0, 0, 0, 0.35) inset,
                 6px 6px 6px 4px rgba(255, 255, 255, 0.8) inset;
 }
@@ -856,15 +856,15 @@ body {
 
     width: 40px;
     height: 40px;
-    background: url(../images/buttons/question-button.png?v0.2.1d) 0px 0px;
+    background: url(../images/buttons/question-button.png?v0.2.2a) 0px 0px;
 }
 
 .buttom-sim-help-image:hover {
-    background: url(../images/buttons/question-button.png?v0.2.1d) 80px 0px;
+    background: url(../images/buttons/question-button.png?v0.2.2a) 80px 0px;
 }
 
 .buttom-sim-help-image:active {
-    background: url(../images/buttons/question-button.png?v0.2.1d) 40px 0px;
+    background: url(../images/buttons/question-button.png?v0.2.2a) 40px 0px;
 }
 /* #endregion */
 
@@ -1073,17 +1073,17 @@ body {
 
 .expand-sidebar-image {
     transform: translate(-8px, -3px);
-    background: url(../images/buttons/expand-arrow.png?v0.2.1d) 0px 0px;
+    background: url(../images/buttons/expand-arrow.png?v0.2.2a) 0px 0px;
     width: 30px;
     height: 30px;
 }
 
 .expand-sidebar-image:hover {
-    background: url(../images/buttons/expand-arrow.png?v0.2.1d) 60px 0px;
+    background: url(../images/buttons/expand-arrow.png?v0.2.2a) 60px 0px;
 }
 
 .expand-sidebar-image:active {
-    background: url(../images/buttons/expand-arrow.png?v0.2.1d) 30px 0px;
+    background: url(../images/buttons/expand-arrow.png?v0.2.2a) 30px 0px;
 }
 
 .job-holder {
@@ -1160,7 +1160,7 @@ body {
 
 .search-button {
     border-radius: 50%;
-    background: url(../images/buttons/search-button.png?v0.2.1d) no-repeat;
+    background: url(../images/buttons/search-button.png?v0.2.2a) no-repeat;
     height: 41px;
     width: 41px;
     border: none;
@@ -1170,11 +1170,11 @@ body {
 }
 
 .search-button:hover {
-    background: url(../images/buttons/search-button-hover.png?v0.2.1d) no-repeat;
+    background: url(../images/buttons/search-button-hover.png?v0.2.2a) no-repeat;
 }
 
 .search-button:active {
-    background: url(../images/buttons/search-button-click.png?v0.2.1d) no-repeat;
+    background: url(../images/buttons/search-button-click.png?v0.2.2a) no-repeat;
 }
 /* #endregion */
 
@@ -1189,7 +1189,7 @@ body {
     position: relative;
     top: 20px;
     border-radius: 50%;
-    background: url(../images/buttons/name-sort.png?v0.2.1d) no-repeat;
+    background: url(../images/buttons/name-sort.png?v0.2.2a) no-repeat;
     height: 41px;
     width: 41px;
     border: none;
@@ -1199,11 +1199,11 @@ body {
 }
 
 .sort-button:hover {
-    background: url(../images/buttons/name-sort-hover.png?v0.2.1d) no-repeat;
+    background: url(../images/buttons/name-sort-hover.png?v0.2.2a) no-repeat;
 }
 
 .sort-button:active {
-    background: url(../images/buttons/name-sort-selected.png?v0.2.1d) no-repeat;
+    background: url(../images/buttons/name-sort-selected.png?v0.2.2a) no-repeat;
 }
 /* #endregion */
 
@@ -1226,7 +1226,7 @@ body {
 }
 
 .export-arrow {
-    background: url(../images/buttons/export-arrow.png?v0.2.1d) 0px 0px;
+    background: url(../images/buttons/export-arrow.png?v0.2.2a) 0px 0px;
     width: 41px;
     height: 42px;
     margin-top: 9px;
@@ -1239,15 +1239,15 @@ body {
 }
 
 .export-arrow:hover {
-    background: url(../images/buttons/export-arrow.png?v0.2.1d) 0px 84px;
+    background: url(../images/buttons/export-arrow.png?v0.2.2a) 0px 84px;
 }
 
 .export-arrow:active {
-    background: url(../images/buttons/export-arrow.png?v0.2.1d) 0px 42px;
+    background: url(../images/buttons/export-arrow.png?v0.2.2a) 0px 42px;
 }
 
 .import-arrow {
-    background: url(../images/buttons/export-arrow.png?v0.2.1d) 41px 0px;
+    background: url(../images/buttons/export-arrow.png?v0.2.2a) 41px 0px;
     width: 41px;
     height: 42px;
     margin-top: 9px;
@@ -1260,11 +1260,11 @@ body {
 }
 
 .import-arrow:hover {
-    background: url(../images/buttons/export-arrow.png?v0.2.1d) 41px 84px;
+    background: url(../images/buttons/export-arrow.png?v0.2.2a) 41px 84px;
 }
 
 .import-arrow:active {
-    background: url(../images/buttons/export-arrow.png?v0.2.1d) 41px 42px;
+    background: url(../images/buttons/export-arrow.png?v0.2.2a) 41px 42px;
 }
 /* #endregion */
 
