--- a/styles/style.css
+++ b/styles/style.css
@@ -414,6 +414,36 @@ body {
     background-image: linear-gradient(90deg, rgb(1, 74, 1), rgb(2, 67, 2));
 }
 
+/* BOOKMARK LABEL STYLE */
+.bookmark-pink {
+    color: rgb(255, 255, 255);
+    text-shadow: 0px 2px 1px black;
+}
+
+.bookmark-bone {
+    color:rgb(75, 75, 75);
+    text-shadow: 0px 2px 1px white;
+}
+
+.bookmark-orange {
+    color: white;
+}
+
+.bookmark-yellow {
+    color: rgb(33, 21, 4);
+    text-shadow: 0px 2px 1px rgb(162, 134, 24);
+}
+
+.bookmark-maroon {
+    color: rgb(255, 255, 255);
+    text-shadow: 0px 2px 1px black;
+}
+
+.bookmark-green {
+    color: rgb(255, 255, 255);
+    text-shadow: 0px 2px 1px black;
+}
+
 /* LABEL STYLE */
 .label-pink {
     background-color: pink;
