--- a/styles/style.css
+++ b/styles/style.css
@@ -345,8 +345,8 @@ body {
 
 .label-gold {
     color: rgba(0, 0, 0, 0.55);
-    background: url(../images/panel/gold-texture.png?v0.2.2a), #d4af37;
     text-shadow: -1px -1px rgba(0, 0, 0, 0.35);
+    background: url(../images/panel/gold-texture.png?v0.2.2a), #d4af37;
     font-style: italic;
     box-shadow: -2px -3px 2px 2px rgba(0, 0, 0, 0.5) inset,
                 2px 3px 2px 2px rgba(255, 255, 255, 0.8) inset,
@@ -415,6 +415,11 @@ body {
 }
 
 /* BOOKMARK LABEL STYLE */
+.bookmark-gold {
+    color: rgba(0, 0, 0, 0.55);
+    text-shadow: -1px -1px rgba(0, 0, 0, 0.35);
+}
+
 .bookmark-pink {
     color: rgb(255, 255, 255);
     text-shadow: 0px 2px 1px black;
