--- a/styles/style.css
+++ b/styles/style.css
@@ -300,27 +300,27 @@ body {
 }
 
 .window-minable {
-    background: url(../images/buttons/min-window-button.png?v0.2.2b) 0 0;
+    background: url(../images/buttons/min-window-button.png?v0.2.2c) 0 0;
 }
 
 .window-minable:hover {
-    background: url(../images/buttons/min-window-button.png?v0.2.2b) 82px 0;
+    background: url(../images/buttons/min-window-button.png?v0.2.2c) 82px 0;
 }
 
 .window-minable:active {
-    background: url(../images/buttons/min-window-button.png?v0.2.2b) 41px 0;
+    background: url(../images/buttons/min-window-button.png?v0.2.2c) 41px 0;
 }
 
 .window-maxable {
-    background: url(../images/buttons/min-window-button.png?v0.2.2b) 0 41px;
+    background: url(../images/buttons/min-window-button.png?v0.2.2c) 0 41px;
 }
 
 .window-maxable:hover {
-    background: url(../images/buttons/min-window-button.png?v0.2.2b) 82px 41px;
+    background: url(../images/buttons/min-window-button.png?v0.2.2c) 82px 41px;
 }
 
 .window-maxable:active {
-    background: url(../images/buttons/min-window-button.png?v0.2.2b) 41px 41px;
+    background: url(../images/buttons/min-window-button.png?v0.2.2c) 41px 41px;
 }
 /* #endregion */
 
@@ -346,7 +346,7 @@ body {
 .label-gold {
     color: rgba(0, 0, 0, 0.55);
     text-shadow: -1px -1px rgba(0, 0, 0, 0.35);
-    background: url(../images/panel/gold-texture.png?v0.2.2b), #d4af37;
+    background: url(../images/panel/gold-texture.png?v0.2.2c), #d4af37;
     font-style: italic;
     box-shadow: -2px -3px 2px 2px rgba(0, 0, 0, 0.5) inset,
                 2px 3px 2px 2px rgba(255, 255, 255, 0.8) inset,
@@ -354,7 +354,7 @@ body {
 }
 
 .block-gold {
-    background-image: url(../images/panel/gold-texture.png?v0.2.2b), linear-gradient(90deg, #d4af37, #aa8714);
+    background-image: url(../images/panel/gold-texture.png?v0.2.2c), linear-gradient(90deg, #d4af37, #aa8714);
     box-shadow: -3px -3px 4px 3px rgba(0, 0, 0, 0.35) inset,
                 6px 6px 6px 4px rgba(255, 255, 255, 0.8) inset;
 }
@@ -894,15 +894,15 @@ body {
 
     width: 40px;
     height: 40px;
-    background: url(../images/buttons/question-button.png?v0.2.2b) 0px 0px;
+    background: url(../images/buttons/question-button.png?v0.2.2c) 0px 0px;
 }
 
 .buttom-sim-help-image:hover {
-    background: url(../images/buttons/question-button.png?v0.2.2b) 80px 0px;
+    background: url(../images/buttons/question-button.png?v0.2.2c) 80px 0px;
 }
 
 .buttom-sim-help-image:active {
-    background: url(../images/buttons/question-button.png?v0.2.2b) 40px 0px;
+    background: url(../images/buttons/question-button.png?v0.2.2c) 40px 0px;
 }
 /* #endregion */
 
@@ -1111,17 +1111,17 @@ body {
 
 .expand-sidebar-image {
     transform: translate(-8px, -3px);
-    background: url(../images/buttons/expand-arrow.png?v0.2.2b) 0px 0px;
+    background: url(../images/buttons/expand-arrow.png?v0.2.2c) 0px 0px;
     width: 30px;
     height: 30px;
 }
 
 .expand-sidebar-image:hover {
-    background: url(../images/buttons/expand-arrow.png?v0.2.2b) 60px 0px;
+    background: url(../images/buttons/expand-arrow.png?v0.2.2c) 60px 0px;
 }
 
 .expand-sidebar-image:active {
-    background: url(../images/buttons/expand-arrow.png?v0.2.2b) 30px 0px;
+    background: url(../images/buttons/expand-arrow.png?v0.2.2c) 30px 0px;
 }
 
 .job-holder {
@@ -1198,7 +1198,7 @@ body {
 
 .search-button {
     border-radius: 50%;
-    background: url(../images/buttons/search-button.png?v0.2.2b) no-repeat;
+    background: url(../images/buttons/search-button.png?v0.2.2c) no-repeat;
     height: 41px;
     width: 41px;
     border: none;
@@ -1208,11 +1208,11 @@ body {
 }
 
 .search-button:hover {
-    background: url(../images/buttons/search-button-hover.png?v0.2.2b) no-repeat;
+    background: url(../images/buttons/search-button-hover.png?v0.2.2c) no-repeat;
 }
 
 .search-button:active {
-    background: url(../images/buttons/search-button-click.png?v0.2.2b) no-repeat;
+    background: url(../images/buttons/search-button-click.png?v0.2.2c) no-repeat;
 }
 /* #endregion */
 
@@ -1227,7 +1227,7 @@ body {
     position: relative;
     top: 20px;
     border-radius: 50%;
-    background: url(../images/buttons/name-sort.png?v0.2.2b) no-repeat;
+    background: url(../images/buttons/name-sort.png?v0.2.2c) no-repeat;
     height: 41px;
     width: 41px;
     border: none;
@@ -1237,11 +1237,11 @@ body {
 }
 
 .sort-button:hover {
-    background: url(../images/buttons/name-sort-hover.png?v0.2.2b) no-repeat;
+    background: url(../images/buttons/name-sort-hover.png?v0.2.2c) no-repeat;
 }
 
 .sort-button:active {
-    background: url(../images/buttons/name-sort-selected.png?v0.2.2b) no-repeat;
+    background: url(../images/buttons/name-sort-selected.png?v0.2.2c) no-repeat;
 }
 /* #endregion */
 
@@ -1264,7 +1264,7 @@ body {
 }
 
 .export-arrow {
-    background: url(../images/buttons/export-arrow.png?v0.2.2b) 0px 0px;
+    background: url(../images/buttons/export-arrow.png?v0.2.2c) 0px 0px;
     width: 41px;
     height: 42px;
     margin-top: 9px;
@@ -1277,15 +1277,15 @@ body {
 }
 
 .export-arrow:hover {
-    background: url(../images/buttons/export-arrow.png?v0.2.2b) 0px 84px;
+    background: url(../images/buttons/export-arrow.png?v0.2.2c) 0px 84px;
 }
 
 .export-arrow:active {
-    background: url(../images/buttons/export-arrow.png?v0.2.2b) 0px 42px;
+    background: url(../images/buttons/export-arrow.png?v0.2.2c) 0px 42px;
 }
 
 .import-arrow {
-    background: url(../images/buttons/export-arrow.png?v0.2.2b) 41px 0px;
+    background: url(../images/buttons/export-arrow.png?v0.2.2c) 41px 0px;
     width: 41px;
     height: 42px;
     margin-top: 9px;
@@ -1298,11 +1298,11 @@ body {
 }
 
 .import-arrow:hover {
-    background: url(../images/buttons/export-arrow.png?v0.2.2b) 41px 84px;
+    background: url(../images/buttons/export-arrow.png?v0.2.2c) 41px 84px;
 }
 
 .import-arrow:active {
-    background: url(../images/buttons/export-arrow.png?v0.2.2b) 41px 42px;
+    background: url(../images/buttons/export-arrow.png?v0.2.2c) 41px 42px;
 }
 /* #endregion */
 
